<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_instructions_header">Quiz Instructions:</string>
    <string name="quiz_instructions_text">After you have provided all answers, click the SUBMIT button at the bottom to get your quiz results</string>
    <string name="question_1_text">1.  What keyword is used to declare a variable of type integer in Java?</string>
    <string name="question_2_text">2.  What type of primitive has a value of either true or false?</string>
    <string name="question_3_text">3.  What keyword do you use to declare a variable containing text?</string>
    <string name="question_4_text">4.  Select all items that are primitive data types</string>
    <string name="question_4_box_one_text">class</string>
    <string name="question_4_box_two_text">float</string>
    <string name="question_4_box_three_text">Array</string>
    <string name="question_5_text">5.  Select the valid types of control flow statements</string>
    <string name="question_5_box_one_text">if then</string>
    <string name="question_5_box_two_text">while</string>
    <string name="question_5_box_three_text">while else</string>
    <string name="question_6_text">6.  The Google Material Design Guide recommends what number level for primary colors </string>
    <string name="question_6_radio_button_one_text">500</string>
    <string name="question_6_radio_button_two_text">700</string>
    <string name="question_6_radio_button_three_text">900</string>
</resources>
